Mise à jour des styles et de l'interface utilisateur : - Amélioration du style des boutons - Mise à jour des logos (conversion en SVG) - Optimisation des templates d'emails - Ajout de nouvelles fonctionnalités de notification - Améliorations générales de l'interface

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,7 +137,7 @@
   }
   
   input, select, textarea {
-    font-size: 16px; /* Taille minimum pour éviter le zoom sur iOS */
+    font-size: 10px !important;
   }
 
   /* Background gradient */
@@ -221,6 +221,12 @@
     .no-scrollbar::-webkit-scrollbar {
       display: block !important;
     }
+  }
+
+  /* Désactiver le zoom sur mobile */
+  html {
+    touch-action: manipulation;
+    -webkit-text-size-adjust: 100%;
   }
 }
 
