--- a/src/templates/email/client/unread_message_reminder.html
+++ b/src/templates/email/client/unread_message_reminder.html
@@ -98,7 +98,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <img src="https://vynalplatform.com/assets/logo/logo_vynal_platform_simple.webp" alt="Vynal Platform Logo" class="logo">
+      <h1 style="color: #6554AF; font-size: 18px; margin: 0;">Vynal Platform</h1>
     </div>
     
     <div class="content">
