--- a/src/templates/email/client/project_validated.html
+++ b/src/templates/email/client/project_validated.html
@@ -98,8 +98,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://vynalplatform.com/assets/logo/logo_vynal_platform_simple.webp" alt="Vynal Logo" class="logo">
-        </div>
+      <h1 style="color: #6554AF; font-size: 18px; margin: 0;">Vynal Platform</h1>
+    </div>
         
         <div class="content">
             <div class="notification-badge">Projet validé</div>
