--- a/src/templates/email/freelance/order_cancelled.html
+++ b/src/templates/email/freelance/order_cancelled.html
@@ -28,7 +28,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <img src="https://vynalplatform.com/assets/logo/logo_vynal_platform_simple.webp" alt="Vynal Platform Logo" class="logo">
+      <h1 style="color: white; font-size: 18px; margin: 0;">Vynal Platform</h1>
     </div>
     
     <div class="content">
